# DOOM-3-BFG

docs/: NOTES
neo/: CMakeLists.txt
neo/cmake/: DevkitPPCToolchain.cmake
neo/idlib/: SoftwareCache.h  Str.h  precompiled.h
neo/idlib/bv/: Bounds.cpp
neo/idlib/math/: Math.h  Simd.h
neo/idlib/sys/: sys_defines.h  sys_includes.h  sys_intrinsics.h  sys_threading.h  sys_types.h
neo/sys/: Snapshot.h  sys_public.h
neo/sys/wii-ogc/: main.cpp
